header and  banner

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects</title>
+    <!-------------stylesheet--------------->
     <link rel="stylesheet" href="styles.css">
+    <!----------------icons---------------->
+    <script src="https://kit.fontawesome.com/929dc85bc3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <h2 class="title">G3 Architects</h2>
+        <nav>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact us</a>
+            <a href="">Login</a>
+        </nav>
+    </header>
+    <section class="banner">
+        <h1 class="banner-title">Brand New</h1>
+        <h1 class="banner-title">Group of Architects</h1>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button>Explore Now</button>
+        <div class="banner-image">
+            <img src="images/banner.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
