--- a/index.html
+++ b/index.html
@@ -25,11 +25,31 @@
         <h1 class="banner-title">Brand New</h1>
         <h1 class="banner-title">Group of Architects</h1>
         <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button>Explore Now</button>
+        <button class="primary-btn">Explore Now</button>
         <div class="banner-image">
             <img src="images/banner.png" alt="">
         </div>
     </section>
+    <section class="features-container">
+        <div class="quick-list">
+            <div class="quick-img">
+                <div><img src="images/team1.png" alt=""></div>
+                <div><img src="images/team2.png" alt=""></div>
+                <div><img src="images/team3.png" alt=""></div>
+                <div><img src="images/team4.png" alt=""></div>
+            </div>
+            <div class="quick-description">
+                <h1><span style="color: #727272;">Quick list</span> of Our</h1>
+                <h1 style="color: #FF900E;">Features</h1>
+                <p style="color: #727272;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore Now</button>
+            </div>
+        </div>
+        <div class="features">
+
+        </div>
+    </section>
+    
 </body>
 
 </html>
