features section completed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <section class="banner">
         <h1 class="banner-title">Brand New</h1>
         <h1 class="banner-title">Group of Architects</h1>
-        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="primary-btn">Explore Now</button>
         <div class="banner-image">
             <img src="images/banner.png" alt="">
@@ -41,15 +42,48 @@
             <div class="quick-description">
                 <h1><span style="color: #727272;">Quick list</span> of Our</h1>
                 <h1 style="color: #FF900E;">Features</h1>
-                <p style="color: #727272;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="primary-btn">Explore Now</button>
             </div>
         </div>
         <div class="features">
+            <div class="features-description">
+                <div>
+                    <div></div>
+                    <h1 class="title">Features you will<br>love and enjoy</h1>
+                </div>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h3>Desktop & Mobile Version</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3>Awesome Modern Design</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3>Super Easy to Edit</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
 
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+            </div>
         </div>
     </section>
+    <button class="features-btn">
+        <h3 style="margin: 0;">10+Year</h3>
+        <h4 style="margin: 0;">Experience</h4>
+    </button>
     
+
 </body>
 
 </html>
