btn position fixed

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
             </div>
         </div>
     </section>
-    <button class="features-btn">
-        <h3 style="margin: 0;">10+Year</h3>
-        <h4 style="margin: 0;">Experience</h4>
-    </button>
+    <div class="btn-div">
+        <button class="features-btn">
+            <h3 style="margin: 0;">10+Year</h3>
+            <h4 style="margin: 0;">Experience</h4>
+        </button>
+    </div>
     
 
 </body>
