--- a/index.html
+++ b/index.html
@@ -84,7 +84,32 @@
             <h4 style="margin: 0;">Experience</h4>
         </button>
     </div>
-    
+    <div class="some-facts">
+        <h1>Some Facts</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+    <section class="achievements-container">
+        <div class="achievement">
+            <img src="images/icons/ribon.png" alt="">
+            <h2>54</h2>
+            <p>Awards Winnings</p>
+        </div>
+        <div class="achievement">
+            <img src="images/icons/projects.png" alt="">
+            <h2>1458</h2>
+            <p>Project Finished</p>
+        </div>
+        <div class="achievement">
+            <img src="images/icons/customers.png" alt="">
+            <h2>590</h2>
+            <p>Clients Worked</p>
+        </div>
+        <div class="achievement">
+            <img src="images/icons/email.png" alt="">
+            <h2>22578</h2>
+            <p>Email Send</p>
+        </div>
+    </section>
 
 </body>
 
