--- a/index.html
+++ b/index.html
@@ -110,6 +110,24 @@
             <p>Email Send</p>
         </div>
     </section>
+    <section class="our-sponsors">
+        <div class="intro">
+            <h1>Our Sponsors</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="sponsors-container">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+        </div>
+    </section>
+    <footer>
+        <div>
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 
 </body>
 
